--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,6 @@ workflows:
     jobs:
       - build
       - test
-        require: build
+        requires: build
       - analayse
-        require: test
+        requires: test
