--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,8 @@ workflows:
     jobs:
       - build
       - test
-        requires: build
+        requires: 
+          - build
       - analayse
-        requires: test
+        requires: 
+          - test
