--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             - /src/node_modules
       - run:
           name: npm run lint
-          command: npm lint
+          command: npm run lint
 
       - run:
           name: Run Tests
